Fourth day of NLW#05

--- a/src/components/Player/styles.module.scss
+++ b/src/components/Player/styles.module.scss
@@ -43,6 +43,28 @@
   justify-content: center;
 }
 
+.current-episode {
+  text-align: center;
+
+  img {
+    border-radius: 1.5rem;
+  }
+
+  strong {
+    display: block;
+    margin-top: 2rem;
+    font: 600 1.25rem var(--title-font-family);
+    line-height: 1.75rem;
+  }
+
+  span {
+    display: block;
+    margin-top: 1rem;
+    opacity: 0.6;
+    line-height: 1.5rem;
+  }
+}
+
 .progress {
   display: flex;
   align-items: center;
@@ -79,6 +101,16 @@
   background: transparent;
   border: 0;
   font-size: 0;
+
+  transition: filter 0.2s;
+
+  &:disabled {
+    cursor: default;
+  }
+
+  &:hover:not(:disabled) {
+    filter: brightness(0.7);
+  }
 }
 
 .play-button {
@@ -86,4 +118,8 @@
   height: 4rem;
   border-radius: 1rem;
   background-color: var(--purple-400);
+
+  &:hover:not(:disabled) {
+    filter: brightness(0.95);
+  }
 }
