--- a/src/components/Player/styles.module.scss
+++ b/src/components/Player/styles.module.scss
@@ -24,7 +24,7 @@
   align-self: stretch;
 }
 
-.empty {
+.empty .progress {
   opacity: 0.5;
 }
 
@@ -106,10 +106,19 @@
 
   &:disabled {
     cursor: default;
+    opacity: 0.5;
   }
 
   &:hover:not(:disabled) {
     filter: brightness(0.7);
+  }
+}
+
+.is-active {
+  filter: invert(0.35) sepia(1) saturate(3) hue-rotate(100deg);
+
+  &:hover {
+    filter: brightness(0.6) invert(0.35) sepia(1) saturate(3) hue-rotate(100deg);
   }
 }
 
